--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     }
 
     h2 {
-      color: #f7931a;
+      color: #003399;
     }
 
     .btn {
-      background-color: #f7931a;
+      background-color: #003399;
       color: white;
       padding: 12px 20px;
       margin-top: 20px;
@@ -40,7 +40,7 @@
 
     .note {
       font-size: 13px;
-      color: #777;
+      color: #555;
       margin-top: 10px;
     }
 
@@ -53,13 +53,13 @@
     }
 
     .alert {
-      background-color: #fff3cd;
-      color: #856404;
+      background-color: #e8f0fe;
+      color: #003399;
       padding: 12px;
       border-radius: 6px;
       margin-bottom: 20px;
       font-size: 14px;
-      border: 1px solid #ffeeba;
+      border: 1px solid #c3dafe;
     }
 
     #successMessage {
