--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #003399; /* American flag blue */
+      background-image: url('https://i.ibb.co/wQYxwpr/american-eagle-bg.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
