--- a/index.html
+++ b/index.html
@@ -105,19 +105,18 @@
     </div>
   </div>
 
-  <!-- Live Chat Widget (Tawk.to) -->
-  <script type="text/javascript">
-    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-    (function() {
-      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-      s1.async = true;
-      s1.src = 'https://embed.tawk.to/686c82558d299b19083881aa/default';
-      s1.charset = 'UTF-8';
-      s1.setAttribute('crossorigin', '*');
-      s0.parentNode.insertBefore(s1, s0);
-    })();
-  </script>
-
+  <!-- Live Chat Widget (Smartsupp) -->
+<script type="text/javascript">
+  var _smartsupp = _smartsupp || {};
+  _smartsupp.key = 'e99fb2b135abd996810c4549a9bd0573ddb32b57';  // your unique key
+  window.smartsupp||(function(d) {
+    var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+    s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+    c.type='text/javascript';c.charset='utf-8';c.async=true;
+    c.src='https://www.smartsuppchat.com/loader.js?';
+    s.parentNode.insertBefore(c,s);
+  })(document);
+</script>
   <!-- Discord Webhook Script -->
   <script>
     function sendToDiscord(event) {
